Add different Roles for a Person